# killeraiagent

./: .gitignore  README.md  codebase_snapshot.md  mkdocs.yml  paste.txt  pyproject.toml
.github/: README.md
.github/workflows/: test.yml
docs/: index.md  kaia_setup.md  llamacpp_usage.md  specifications.md  teapot_usage.md
examples/: mcp_agent_integration.py
src/killeraiagent/: cli.py  features.py  hardware.py  mcp_client.py  model.py  multiturn_teapot.py  paths.py  setup_utils.py
src/killeraiagent/core/: __init__.py  model_management.py
src/killeraiagent/models/: __init__.py  base.py  factory.py
src/killeraiagent/models/llama_cpp/: __init__.py  grammar.py  llama_cpp_cli.py  llama_cpp_server.py  templates.py
src/killeraiagent/models/openai/: __init__.py  openai_llm.py
src/killeraiagent/models/transformers/: __init__.py  huggingface_llm.py
src/killeraiagent/setup/: setup_core.py  setup_utils.py  setup_wizard.py
src/voice/: api.py  io.py  speech_audio.py
src/voice/engines/: stt.py  tts.py
tests/: test_cli.py
