[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "killeraiagent"
version = "0.1.0"
description = "Killer AI Agents (KAIA) - A modular, extensible platform for creating and managing AI agents"
authors = [
  { name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "llm", "agents", "rag", "huggingface"]
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "psutil>=5.9.0",
  "huggingface-hub>=0.23.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "cmake>=3.24.0",
  "ninja>=1.10.0",
  "gguf",
  "pydantic",
  "siphash24",
]

[project.optional-dependencies]
# Development dependencies
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "isort>=5.10.0",
]

# GUI dependencies
gui = [
  "PySide6>=6.5.0",
]

# Voice interface dependencies
voice = [
  "kokoro>=0.2.0",
  "sounddevice>=0.4.6",
  "soundfile>=0.12.1",
  "sherpa-onnx>=1.8.0",
  "torchaudio>=2.0.0",
  "numpy>=1.23.0",
]

# All features
all = [
  "killeraiagent[gui,voice,stt]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["killeraiagent*"]

[project.scripts]
kaia = "killeraiagent.cli:main"
kaia-setup = "killeraiagent.setup.setup_utils:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.vibelint]
include_globs = [
    "src/**/*.py",
    "tests/**/*.p.y",
    "pyroject.toml"
]